--- a/_posts/2017-10-04-お願い！シンデレラ.md
+++ b/_posts/2017-10-04-お願い！シンデレラ.md
@@ -4,7 +4,7 @@ layout: post
 ---
 歌：全体参演者
 
-<font color="saddlebrown">//全员曲，除特定部分须由固定属性演唱之外，大部分歌词分配均可作适当改动，较为自由</font>
+<p><font color="saddlebrown">//全员曲，除特定部分须由固定属性演唱之外，大部分歌词分配均可作适当改动，较为自由</font></p>
 
 <p>お願い！ シンデレラ<br />
 夢は夢で終われない<br />
