--- a/_posts/2017-08-13-生存本能ヴァルキュリア.md
+++ b/_posts/2017-08-13-生存本能ヴァルキュリア.md
@@ -2,14 +2,14 @@
 title: 生存本能ヴァルキュリア
 layout: post
 ---
-歌：<font color="cyan">新田美波</font> <font color="blue">鷺沢文香</font> <font color="steelblue">橘ありす</font> <font color="lime">高森藍子</font> <font color="gold">相葉夕美</font>
+歌：<font color="deepskyblue">新田美波</font> <font color="blue">鷺沢文香</font> <font color="steelblue">橘ありす</font> <font color="lime">高森藍子</font> <font color="gold">相葉夕美</font>
 
 <p><font color="lime">もっと強く もっと優しく<br />
 なれたなら後悔は減るのかしら</font><br />
 <font color="gold">欲しいもの 欲しいと言えば<br />
 与えられる気がしていたあの頃</font></p>
 
-<p><font color="cyan">本能が叫ぶわ</font><br />
+<p><font color="deepskyblue">本能が叫ぶわ</font><br />
 <font color="blue">守られるばかりのコドモじゃない もう私</font><br />
 <font color="steelblue">変わりたいと願う</font><br />
 守りたいもの守れる強さを 手に入れたいの<br />
@@ -18,10 +18,10 @@ layout: post
 <p>生き残れ 胸が張り裂けそうな夜も<font color="lime">超えて</font><br />
 <font color="steelblue">いつかの</font>誓いを抱いて<br />
 戦うよ 君が立ち上がり続ける限りは<br />
-<font color="cyan">君こそが希望だから</font><br />
+<font color="deepskyblue">君こそが希望だから</font><br />
 共に行きたいから</p>
 
-<p><font color="cyan">傷付いて また傷つけて<br />
+<p><font color="deepskyblue">傷付いて また傷つけて<br />
 過ちをくり返す 人はみんな</font><br />
 <font color="blue">泣くことで 赦されようと<br />
 片隅では思っていたんだろう</font></p>
@@ -43,7 +43,7 @@ layout: post
 <font color="steelblue">光さす</font><font color="gold">ステージ 伝えたい</font><br />
 想いを あなたへ届けよう</p>
 
-<p><font color="cyan">生き残れ 愛は</font>心の核-コア-に刻まれてる<br />
+<p><font color="deepskyblue">生き残れ 愛は</font>心の核-コア-に刻まれてる<br />
 記憶がたとえ薄れても<br />
 戦おう この手で掴みたい未来があるの<br />
 待ってるだけじゃいられない<br />
