--- a/_posts/2018-03-09-微熱からmystery.md
+++ b/_posts/2018-03-09-微熱からmystery.md
@@ -33,7 +33,7 @@ layout: post
 <font color="purple">熱い視線で</font><font color="blue">(恥ずかしいけど)</font><br />
 <font color="gold">あなたを見てる</font><font color="purple">(あなたを見てる)</font><br />
 気付いてくれない<br />
-<font color="purple">はやく…</font><br />
+<font color="gold">はやく…</font><br />
 振り向いて</p>
 
 <p>強い陽射しに灼かれながらも<br />
