cinderella girls update

--- a/_posts/2017-09-22-君への詩.md
+++ b/_posts/2017-09-22-君への詩.md
@@ -2,65 +2,62 @@
 title: 君への詩
 layout: post
 ---
-歌：安部菜々 本田未央 北条加蓮 鷹富士茄子 鷺沢文香
+歌：<font color="magenta">安部菜々</font> <font color="gold">本田未央</font> <font color="cyan">北条加蓮</font> <font color="purple">鷹富士茄子</font> <font color="blue">鷺沢文香</font>
 
-摘み取った黄色い花
-ちぎりながら占ってみる
-あと二枚 また指が止まって
-放り投げた
+<p><font color="magenta">摘み取った黄色い花<br />
+ちぎりながら占ってみる</font><br />
+<font color="gold">あと二枚 また指が止まって<br />
+放り投げた</font></p>
 
-憧れと怖さとが
-半分こで(まだ)踏みだせないまま
-それでもね 空の青さから目を
-離せなくて
+<p><font color="cyan">憧れと怖さとが<br />
+半分こで</font>(まだ)<font color="cyan">踏みだせないまま</font><br />
+<font color="purple">それでもね 空の青さから目を<br />
+離せなくて</font></p>
 
-自分に自信がなかった(なくしてた)
-臆病な私の背中に
-そっと触れた 後押しをしてた ああ
-想いはまるで 優しく吹く風だね
+<p><font color="blue">自分に自信がなかった</font>(なくしてた)<br />
+<font color="blue">臆病な私の背中に</font><br />
+【<font color="gold">未央</font>&<font color="purple">茄子</font>】そっと触れた 【<font color="cyan">加蓮</font>&<font color="blue">文香</font>】後押しをしてた <font color="magenta">ああ<br />
+想いはまるで</font> 【5人】優しく吹く風だね</p>
 
-君に 君に 君に 見ててほしいの
-ふわり ふわり 浮かんだ綿毛が
-新しく咲く場所を探しに
-冒険を始めた
+<p>君に 君に 君に 見ててほしいの<br />
+ふわり ふわり 浮かんだ綿毛が<br />
+<font color="blue">新しく咲く場所を探しに</font><br />
+<font color="purple">冒険を始めた</font><br />
+ゆれて ゆれて ゆれて 頼りなくても<br />
+わたしらしく飛んで<br />
+<font color="cyan">手を振るよ</font> <font color="gold">伝えるよ</font> <font color="magenta">信じてくれた</font><br />
+君に「ありがとう」</p>
 
-ゆれて ゆれて ゆれて 頼りなくても
-わたしらしく飛んで
-手を振るよ 伝えるよ 信じてくれた
-君に「ありがとう」
+<p><font color="gold">あたたかい陽だまりが<br />
+心地よくて</font>(もっと)<font color="gold">まどろんでたくて</font><br />
+<font color="cyan">このままでいたかった だけどもう<br />
+次の季節</font></p>
 
-あたたかい陽だまりが
-心地よくて(もっと)まどろんでたくて
-このままでいたかった だけどもう
-次の季節
+<p><font color="magenta">明日が分からなくなって(切なくて)<br />
+しおれはじめてた心を</font><br />
+<font color="blue">見抜かれてた</font> <font color="purple">少し叱られた</font> ああ<br />
+ずっと心配かけてたんだね ごめんね</p>
 
-明日が分からなくなって(切なくて)
-しおれはじめてた心を
-見抜かれてた 少し叱られた ああ
-ずっと心配かけてたんだね ごめんね
+<p>わたし わたし わたし すごく不安で<br />
+だけど だけど 期待も大きくて<br />
+<font color="cyan">見下ろす町が小さく映る</font><font color="gold">頃にはもう<br />
+笑ってた</font><br />
+ららら ららら るらら 軽くハミング<br />
+君が好きなメロディー<br />
+<font color="blue">歌ったら</font> <font color="purple">一緒だね</font> <font color="magenta">どんなに遠く</font><br />
+離れていても</p>
 
-わたし わたし わたし すごく不安で
-だけど だけど 期待も大きくて
-見下ろす町が小さく映る頃にはもう
-笑ってた
+<p><font color="magenta">さあ </font><font color="gold">どこまでゆこうかな</font><br />
+<font color="cyan">どこで咲いてみようかな</font><br />
+<font color="purple">青空</font> <font color="blue">こんなに広くて</font></p>
 
-ららら ららら るらら 軽くハミング
-君が好きなメロディー
-歌ったら 一緒だね どんなに遠く
-離れていても
-
-さあ どこまでゆこうかな
-どこで咲いてみようかな
-青空 こんなに広くて
-
-君に 君に 君に 見ててほしいの
-ふわり ふわり 浮かんだ綿毛が
-知らない世界 旅に出るの
-風に この風に吹かれ
-
-ゆれて ゆれて ゆれて 頼りなくても
-わたしらしく飛んで
-手を振るよ 伝えるよ 信じてくれた
-君に「ありがとう」
-(大事なひと)
-想いを込めて
+<p><font color="magenta">君に 君に 君に 見ててほしいの<br />
+ふわり ふわり 浮かんだ綿毛が</font><br />
+<font color="gold">知らない世界 旅に出るの</font><br />
+<font color="cyan">風に この風に吹かれ</font><br />
+ゆれて ゆれて ゆれて 頼りなくても<br />
+わたしらしく飛んで<br />
+<font color="purple">手を振るよ</font> <font color="blue">伝えるよ</font> <font color="magenta">信じてくれた</font><br />
+君に「ありがとう」<br />
+(大事なひと)<br />
+想いを込めて</p>
