ジングルベルがとまらない

--- a/_posts/2017-09-16-ジングルベルがとまらない.md
+++ b/_posts/2017-09-16-ジングルベルがとまらない.md
@@ -38,7 +38,7 @@ I wish merry merry Christmas(わお)<br />
 <font color="red">口にしちゃダメさ</font></p>
 
 <p><font color="deepskyblue">雪なんて</font><font color="pink">(降らないと)</font><br />
-<font color="deepskyblue">わかってても(Fu)</font><br />
+<font color="deepskyblue">わかってても</font>(Fu)<br />
 【<font color="deepskyblue">曜</font><font color="pink">梨</font>】ロマンティック期待しちゃう(Yes!)<br />
 <font color="silver">あそぼうね</font><font color="gold">(あそぼうよ)</font><br />
 【<font color="silver">善</font><font color="gold">丸</font>】騒ぎすぎても<br />
