--- a/_posts/2018-04-10-僕らのLIVE 君とのLIFE.md
+++ b/_posts/2018-04-10-僕らのLIVE 君とのLIFE.md
@@ -2,56 +2,56 @@
 title: 僕らのLIVE 君とのLIFE
 layout: post
 ---
-歌：μ's
-
-<p>確かな今よりも 新しい夢つかまえたい<br />
-大胆に飛び出せば O.K.マイライフ<br />
-望みは大きくね<br />
-背のびだってば 高く遠く<br />
-まぶしいあした抱きしめに行こう<br />
-全部叶えよう</p>
-
-<p>【<font color="silver">鸟</font><font color="cyan">绘</font>】そうだよ 信じるだけで<br />
-<font color="darkorange">ぐんぐん前に進むよ</font><br />
-君が!</p>
-
-<p>答えなくていいんだわかるから<br />
-胸にえがく場所は同じ<br />
-<font color="darkorange">何度でも諦めずに 探すことが僕らの挑戦</font><br />
-元気の温度は下がらない<br />
-熱いままで羽ばたいてく<br />
-あこがれを語る君の<br />
-ゆずらない瞳がだいすき…<br />
-<font color="darkorange">ダイスキ!</font></p>
-
-<p>泣いても空の色 変わらないし青いままで<br />
-いますぐに会いたいね O.K.サンシャイン<br />
-並んで感じたい<br />
-理屈じゃなく 側にいたら<br />
-きもちがぐっと近づく意味が<br />
-すぐに伝わるよ</p>
-
-<p>【<font color="silver">鸟</font><font color="cyan">绘</font>】そうだね 誰もがひとつ<br />
-<font color="darkorange">持ってる勇気の欠片は</font><br />
-君と!<br />
-一緒だってば ずっとね</p>
-
-<p>思い付きでいいから追いかけて<br />
-こころ踊る場所を探そう<br />
-<font color="cyan">躓いて起き上がって</font><br />
-<font color="silver">見つめあえる嬉しい冒険</font><br />
-笑顔はどこまで届くかな<br />
-約束とかいらないけど<br />
-いつまでも君といたい<br />
-駆け抜けて一緒にきらきら…キラキラ!</p>
-
-<p>きらきら…キラキラ… Hi!Hi!Hi!Hi!<br />
-だいすき…ダイスキ… Hi!Hi!Hi!Hi!yeah!</p>
-
-<p>答えなくていいんだわかるから<br />
-胸にえがく場所は同じ<br />
-何度でも諦めずに 探すことが僕らの挑戦<br />
-元気の温度は下がらない<br />
-熱いままで羽ばたいてく<br />
-あこがれを語る君の<br />
-ゆずらない瞳がだいすき…ダイスキ!</p>
+歌：μ's  
+ 
+確かな今よりも 新しい夢つかまえたい  
+大胆に飛び出せば O.K.マイライフ  
+望みは大きくね  
+背のびだってば 高く遠く  
+まぶしいあした抱きしめに行こう  
+全部叶えよう  
+ 
+【<font color="silver">鸟</font><font color="cyan">绘</font>】そうだよ 信じるだけで  
+<font color="darkorange">ぐんぐん前に進むよ</font>  
+君が!  
+ 
+答えなくていいんだわかるから  
+胸にえがく場所は同じ  
+<font color="darkorange">何度でも諦めずに 探すことが僕らの挑戦</font>  
+元気の温度は下がらない  
+熱いままで羽ばたいてく  
+あこがれを語る君の  
+ゆずらない瞳がだいすき…  
+<font color="darkorange">ダイスキ!</font>  
+ 
+泣いても空の色 変わらないし青いままで  
+いますぐに会いたいね O.K.サンシャイン  
+並んで感じたい  
+理屈じゃなく 側にいたら  
+きもちがぐっと近づく意味が  
+すぐに伝わるよ  
+ 
+【<font color="silver">鸟</font><font color="cyan">绘</font>】そうだね 誰もがひとつ  
+<font color="darkorange">持ってる勇気の欠片は</font>  
+君と!  
+一緒だってば ずっとね  
+ 
+思い付きでいいから追いかけて  
+こころ踊る場所を探そう  
+<font color="cyan">躓いて起き上がって</font>  
+<font color="silver">見つめあえる嬉しい冒険</font>  
+笑顔はどこまで届くかな  
+約束とかいらないけど  
+いつまでも君といたい  
+駆け抜けて一緒にきらきら…キラキラ!  
+ 
+きらきら…キラキラ… Hi!Hi!Hi!Hi!  
+だいすき…ダイスキ… Hi!Hi!Hi!Hi!yeah!  
+ 
+答えなくていいんだわかるから  
+胸にえがく場所は同じ  
+何度でも諦めずに 探すことが僕らの挑戦  
+元気の温度は下がらない  
+熱いままで羽ばたいてく  
+あこがれを語る君の  
+ゆずらない瞳がだいすき…ダイスキ!
