--- a/_posts/2017-12-12-待ってて愛のうた.md
+++ b/_posts/2017-12-12-待ってて愛のうた.md
@@ -5,17 +5,17 @@ layout: post
 歌：Aqours
 
 <p>【C】目を閉じて聞いていたよ<br />
-　　&nbsp;&nbsp;くりかえす波の音を<br />
-　　&nbsp;&nbsp;今日は【A&G】(今日は)<br />
-　　&nbsp;&nbsp;静かに流れてく<br />
+　　&nbsp;&nbsp;&nbsp;くりかえす波の音を<br />
+　　&nbsp;&nbsp;&nbsp;今日は【A&G】(今日は)<br />
+　　&nbsp;&nbsp;&nbsp;静かに流れてく<br />
 【A】すれ違うひともなくて<br />
-　　&nbsp;&nbsp;ひとりきり歩く道で<br />
-　　&nbsp;&nbsp;ラララ…【C&G】(ラララ…)<br />
-　　&nbsp;&nbsp;口ずさむ愛のうた</p>
+　　&nbsp;&nbsp;&nbsp;ひとりきり歩く道で<br />
+　　&nbsp;&nbsp;&nbsp;ラララ…【C&G】(ラララ…)<br />
+　　&nbsp;&nbsp;&nbsp;口ずさむ愛のうた</p>
 
 <p>【G】そんな強い想いなんて<br />
-　　&nbsp;&nbsp;まだわからないけどいつかは<br />
-　　&nbsp;&nbsp;心からの気持ちこめて歌ってみたいから<br />
+　　&nbsp;&nbsp;&nbsp;まだわからないけどいつかは<br />
+　　&nbsp;&nbsp;&nbsp;心からの気持ちこめて歌ってみたいから<br />
 【C】(それはいつかな)</p>
 
 <p>【9人】待っててくれるかい？<br />
@@ -34,14 +34,14 @@ layout: post
 <font color="pink">いつも</font><font color="darkorange">(いつも)</font><br />
 <font color="pink">とりとめのないこと</font><br />
 【G】少しだけ切ない気分<br />
-　　&nbsp;&nbsp;ひとりきり立ちどまれば<br />
-　　&nbsp;&nbsp;ラララ…【C&A】(ラララ…)<br />
-　　&nbsp;&nbsp;泣けてくる愛のうた</p>
+　　&nbsp;&nbsp;&nbsp;ひとりきり立ちどまれば<br />
+　　&nbsp;&nbsp;&nbsp;ラララ…【C&A】(ラララ…)<br />
+　　&nbsp;&nbsp;&nbsp;泣けてくる愛のうた</p>
 
 <p>【A】誰にきいてみたらわかる？<br />
-　　&nbsp;&nbsp;きいてわかるものじゃないよね<br />
-　　&nbsp;&nbsp;胸を焦がす恋のチカラ<br />
-　　&nbsp;&nbsp;思いっきり歌ってみたいけど<br />
+　　&nbsp;&nbsp;&nbsp;きいてわかるものじゃないよね<br />
+　　&nbsp;&nbsp;&nbsp;胸を焦がす恋のチカラ<br />
+　　&nbsp;&nbsp;&nbsp;思いっきり歌ってみたいけど<br />
 【G】(先のことだね)</p>
 
 <p>【9人】信じてくれるかい？<br />
