--- a/_posts/2017-10-31-スリリング·ワンウェイ.md
+++ b/_posts/2017-10-31-スリリング·ワンウェイ.md
@@ -22,8 +22,8 @@ layout: post
 　　　　決めるんだ ハッピーチョイス</p>
 
 <p>【G】ギリギリ【A】(見えない)<br />
-　　  だけどね　　   (世の中)<br />
-　　  走る未来　　   (マイ未来)<br />
+　　&nbsp;&nbsp;&nbsp;だけどね　　&nbsp;&nbsp;&nbsp;(世の中)<br />
+　　&nbsp;&nbsp;&nbsp;走る未来　　&nbsp;&nbsp;&nbsp;(マイ未来)<br />
 【A】スリリング·ワンウェイ<br />
 【G】それこそ本望だね<br />
 　　  生きる熱さを感じたいだけさ</p>
@@ -44,8 +44,8 @@ layout: post
 　　　　つかむんだ ラッキースター</p>
 
 <p>【G】ハラハラ【A】(迷いも)<br />
-　　  もとめて　　   (道づれ)<br />
-　　  走れ未来　　   (マイ未来)<br />
+　　&nbsp;&nbsp;&nbsp;もとめて　　&nbsp;&nbsp;&nbsp;(道づれ)<br />
+　　&nbsp;&nbsp;&nbsp;走れ未来　　&nbsp;&nbsp;&nbsp;(マイ未来)<br />
 【A】スリリング·ワンウェイ<br />
 【G】それこそ本能だと<br />
 　　  命燃やして感じたいだけさ</p>
