--- a/_posts/2018-01-31-ユメノトビラ.md
+++ b/_posts/2018-01-31-ユメノトビラ.md
@@ -9,7 +9,7 @@ layout: post
 <font color="cyan">つながりを探してた</font></p>
 
 <p>【L】Yes! 自分を信じてみんなを信じて<br />
-　　&nbsp;&nbsp;&nbsp;明日が待ってるんだよ 行かなくちゃ<br />
+　　&nbsp;&nbsp;明日が待ってるんだよ 行かなくちゃ<br />
 【B】Yes! 予感の星たち胸に降ってきた<br />
 　　&nbsp;&nbsp;&nbsp;輝け…迷いながら立ち上がるよ</p>
 
@@ -25,7 +25,7 @@ layout: post
 <p>【P】Chance! 自分の想いがみんなの想いが <br />
 　　&nbsp;&nbsp;&nbsp;重なり大きくなり 広がるよ<br />
 【L】Chance! 期待の波へと身を任せてみよう<br />
-　　&nbsp;&nbsp;&nbsp;素敵さ…どこまででも続くPower</p>
+　　&nbsp;&nbsp;素敵さ…どこまででも続くPower</p>
 
 <p>【B】瞳はレンズ僕の心へ 君の笑顔残そう<br />
 　　&nbsp;&nbsp;&nbsp;やがて思い出へ変わるのかい？<br />
