--- a/_posts/2018-01-05-タカラモノズ.md
+++ b/_posts/2018-01-05-タカラモノズ.md
@@ -5,8 +5,8 @@ layout: post
 歌：μ's
 
 <p>【Smile】さあ元気な顔で どこへ行こう?<br />
-　　　　   行きたいと思うトコロへ<br />
-　　　　   はやくはやく Go!!</p>
+　　　　&nbsp;&nbsp;行きたいと思うトコロへ<br />
+　　　　&nbsp;&nbsp;はやくはやく Go!!</p>
 
 <p>【Pure】楽しさは心の持ち方しだいかもね<br />
 　　　　イヤなことはクシャクシャに丸めちゃえ<br />
@@ -26,8 +26,8 @@ layout: post
 　　　　すぐにすぐに Go!!</p>
 
 <p>【Smile】悔しさも利用しようマイナスからプラスへ<br />
-　　　　  ダメすぎるときはちょっと甘えちゃえ<br />
-　　　　  いいよいいよ Go!!</p>
+　　　　&nbsp;&nbsp;ダメすぎるときはちょっと甘えちゃえ<br />
+　　　　&nbsp;&nbsp;いいよいいよ Go!!</p>
 
 <p>【Pure】大好きだから 消せないすてきなパワー<br />
 【Cool】つかもう【Smile】つかもう【Pure】つかもう<br />
