--- a/_posts/2017-09-26-恋が咲く季節.md
+++ b/_posts/2017-09-26-恋が咲く季節.md
@@ -9,12 +9,12 @@ layout: post
 　　　　　【C组】<font color="orangered">村上巴</font> <font color="magenta">関裕美</font> <font color="lime">緒方智絵里</font></p>
 
 <p>【A】花びらが咲く頃 一目惚れを感じて<br />
-　　  頬に染めた色を 隠して君に会えるの<br />
+　　&nbsp;&nbsp;&nbsp;頬に染めた色を 隠して君に会えるの<br />
 【B】真夏の陽射しが降りる 二人だけの空<br />
-　　  見上げていたくて 走り出すDay by day</p>
+　　&nbsp;&nbsp;&nbsp;見上げていたくて 走り出すDay by day</p>
 
 <p>【C】心地よい風が吹いてく<br />
-　　  季節を掴みたい気持ち<br />
+　　&nbsp;&nbsp;&nbsp;季節を掴みたい気持ち<br />
 <font color="lightgreen">ああ… もどかしい時の中 君に会えて</font><br />
 <font color="orange">照れずに 言い出したいの</font><br />
 <font color="mediumpurple">「本当は好きです」</font><br />
