--- a/_posts/2017-10-31-スリリング·ワンウェイ.md
+++ b/_posts/2017-10-31-スリリング·ワンウェイ.md
@@ -26,7 +26,7 @@ layout: post
 　　&nbsp;&nbsp;&nbsp;走る未来　　&nbsp;&nbsp;&nbsp;(マイ未来)<br />
 【A】スリリング·ワンウェイ<br />
 【G】それこそ本望だね<br />
-　　  生きる熱さを感じたいだけさ</p>
+　　&nbsp;&nbsp;&nbsp;生きる熱さを感じたいだけさ</p>
 
 <p>【9人】とまらないよ とまらないよ あふれそうな想いは<br />
 世界中で遊びたいって心からの希望<br />
@@ -48,7 +48,7 @@ layout: post
 　　&nbsp;&nbsp;&nbsp;走れ未来　　&nbsp;&nbsp;&nbsp;(マイ未来)<br />
 【A】スリリング·ワンウェイ<br />
 【G】それこそ本能だと<br />
-　　  命燃やして感じたいだけさ</p>
+　　&nbsp;&nbsp;&nbsp;命燃やして感じたいだけさ</p>
 
 <p>【9人】とまらないで とまらないで めちゃくちゃな願いを<br />
 世界中で叶えようって私たちの野望<br />
