--- a/_posts/2017-12-13-恋になりたいAQUARIUM.md
+++ b/_posts/2017-12-13-恋になりたいAQUARIUM.md
@@ -20,7 +20,7 @@ layout: post
 【<font color="darkorange">千</font><font color="purple">鞠</font><font color="red">黛</font><font color="gold">丸</font>】サカナたちのパーティー <font color="deepskyblue">楽しもうか</font></p>
 
 <p>【除花丸外8人】とってもとっても楽しそう<font color="gold">(ぷかぷか)</font><br />
-　　　　　　　  だったら一緒に ぷかぷかしちゃえば？<br />
+　　　　　　　&nbsp;&nbsp;&nbsp;だったら一緒に ぷかぷかしちゃえば？<br />
 【9人】いつもと違う わたしになれ<br />
 吐息が聞こえる 距離まで<br />
 <font color="deepskyblue">近づきたいな I miss you!</font></p>
@@ -39,7 +39,7 @@ layout: post
 【<font color="darkorange">千</font><font color="purple">鞠</font><font color="limegreen">南</font><font color="gold">丸</font>】サカナたちはなんでも <font color="limegreen">知ってるよ</font></p>
 
 <p>【除花丸外8人】しっかりしっかり楽しんで<font color="gold">(あわあわ)</font><br />
-　　　　　　　  さいごは一緒に あわあわに乗って<br />
+　　　　　　　&nbsp;&nbsp;&nbsp;さいごは一緒に あわあわに乗って<br />
 【9人】また会えるね わたしにキス<br />
 しちゃえば？ しちゃいたい？<br />
 【除曜露比外7人】しちゃいなよ！<br />
