--- a/_posts/2017-11-13-勇気はどこに？君の胸に！.md
+++ b/_posts/2017-11-13-勇気はどこに？君の胸に！.md
@@ -24,7 +24,7 @@ layout: post
 何度だって追いかけようよ 負けないで<br />
 【二年生】だって【其余6人】(今日は)<br />
 　　　　　今日で【其余6人】(だって)<br />
-　　　　　目覚めたら <font color="saddlebrown">//此处以及下面几段的对应位置暂时无法确定，请自行处理</font><br />
+　　　　　目覚めたら <font color="saddlebrown">//以上3句以及下面几段的对应位置暂时无法确定，请自行处理</font><br />
 <font color="darkorange">違う朝だよ</font></p>
 
 <p><font color="magenta">本気になるときは</font><br />
