--- a/_posts/2017-12-17-これから.md
+++ b/_posts/2017-12-17-これから.md
@@ -13,14 +13,18 @@ layout: post
 <font color="lime">駈けてくる 笑顔で息を弾ませ</font></p>
 
 <p><font color="silver">毎日があっという間に</font><br />
-<font color="blue">流れるから<br />
-せめていまを</font><br />
-<font color="darkorange">大事にしたいんだ いまは戻らない</font></p>
+<font color="blue">流れるから せめていまを</font><br />
+<font color="darkorange">大事にしたいんだ いまは<br />
+戻らない</font></p>
 
-<p>季節は巡る 変わってゆく何もかも<br />
-自然なことさ でも心は少しさみしがってしまうよ<br />
-君は想いをどこまで追いかけるのだろう<br />
-一緒にいると決めた出会いから だいぶ遠いところへ来た<br />
+<p>季節は巡る<br />
+変わってゆく何もかも<br />
+自然なことさ でも心は<br />
+少しさみしがってしまうよ<br />
+君は想いを<br />
+どこまで追いかけるのだろう<br />
+一緒にいると決めた出会いから<br />
+だいぶ遠いところへ来た<br />
 ああきっと君も…おなじ気持ち…？</p>
 
 <p>【一年生】いつもどおり会えるよね【二年生】(みんなで)<br />
@@ -28,25 +32,31 @@ layout: post
 　　　　　これからを 笑顔で【二年生】(これからも)<br />
 　　　　　乗りこえられる</p>
 
-<p>【三年生】一日の終わりの空に 照らされて明日のことを<br />
-　　　　　語った夕暮れがとてもなつかしい</p>
+<p>【三年生】一日の終わりの空に<br />
+　　　　　照らされて明日のことを<br />
+　　　　　語った夕暮れがとても<br />
+　　　　　なつかしい</p>
 
 <p>【一年生、三年生】願いを抱いて【二年生】(願いを)<br />
 【二年生、三年生】紡いでゆく夢の糸【一年生】(きらきら)<br />
-【一年生、二年生】素敵なことさ ほら心はつぎの【三年生】(つぎの)<br />
+【一年生、二年生】素敵なことさ ほら心は
+　　　　　　　　　つぎの【三年生】(つぎの)<br />
 　　　　　　　　　物語をさがして<br />
 【一年生、三年生】君は光を【二年生】(光を)<br />
 【二年生、三年生】どこまで追いかけるのだろう【一年生】(どこまで)<br />
-【一年生、二年生】一緒に見ると決めた輝きは 胸の【三年生】(僕の)<br />
+【一年生、二年生】一緒に見ると決めた輝きは
+　　　　　　　　　胸の【三年生】(僕の)<br />
 　　　　　　　　　宝石になったよ<br />
 【9人】ああきっと君も…おなじ気持ち…！</p>
 
 <p><font color="darkorange">季節は巡る</font><br />
 【二年生】変わってゆく何もかも【一年生】(そうだね)<br />
-【三年生】自然なことさ でも心は少し【一年生】(少し)<br />
+【三年生】自然なことさ でも心は
+　　　　　少し【一年生】(少し)<br />
 　　　　　さみしがってしまうよ<br />
 【一年生、三年生】君は想いを【二年生】(想いを)<br />
 【二年生、三年生】どこまで追いかけるのだろう【一年生】(どこまで)<br />
-【一年生、二年生】一緒にいると決めた出会いから だいぶ【三年生】(遠い)<br />
+【一年生、二年生】一緒にいると決めた出会いから
+　　　　　　　　　だいぶ【三年生】(遠い)<br />
 　　　　　　　　　遠いところへ来た<br />
 【9人】ああきっとみんな…おなじ気持ち…！</p>
