--- a/_posts/2017-11-13-勇気はどこに？君の胸に！.md
+++ b/_posts/2017-11-13-勇気はどこに？君の胸に！.md
@@ -20,11 +20,12 @@ layout: post
 
 <p>何度だって追いかけようよ 負けないで<br />
 失敗なんて 誰でもあるよ<br />
-夢は 消えない 夢は 消えない<br />
+【二年生】夢は【其余6人】(消えない)<br />
+　　　　　夢は【其余6人】(消えない)<br />
 何度だって追いかけようよ 負けないで<br />
 【二年生】だって【其余6人】(今日は)<br />
 　　　　　今日で【其余6人】(だって)<br />
-　　　　　目覚めたら <font color="saddlebrown">//以上3句以及下面几段的对应位置暂时无法确定，请自行处理</font><br />
+　　　　　目覚めたら<br />
 <font color="darkorange">違う朝だよ</font></p>
 
 <p><font color="magenta">本気になるときは</font><br />
@@ -38,13 +39,14 @@ layout: post
 
 <p><font color="darkorange">信じてあげなよ<br />
 自分だけのチカラ</font><br />
-君が君であろうとしてるチカラ<br />
+【<font color="pink">梨</font><font color="deepskyblue">曜</font>】君が君であろうとしてるチカラ<br />
 <font color="darkorange">確かめに</font> 【<font color="pink">梨</font><font color="deepskyblue">曜</font>】行かなくちゃ 【二年生】元気に<br />
 【9人】さあ出発だ！</p>
 
 <p>今度きっと見つかるんだって 決めようよ<br />
 走り続けて つかめるミライ<br />
-夢が たくさん 夢が たくさん<br />
+【一年生】夢が【其余6人】(たくさん)<br />
+　　　　　夢が【其余6人】(たくさん)<br />
 今度きっと見つかるんだって 決めようよ<br />
 【一年生】もっと【其余6人】(勇気)<br />
 　　　　　だして【其余6人】(もっと)<br />
@@ -65,7 +67,8 @@ layout: post
 
 <p>【9人】何度だって追いかけようよ 負けないで<br />
 失敗なんて 誰でもあるよ<br />
-夢は 消えない 夢は 消えない<br />
+【三年生】夢は【其余6人】(消えない)<br />
+　　　　　夢は【其余6人】(消えない)<br />
 何度だって追いかけようよ 負けないで<br />
 【三年生】だって【其余6人】(今日は)<br />
 　　　　　今日で【其余6人】(だって)<br />
