add links, imas character color test

--- a/_posts/2017-10-01-メッセージ.md
+++ b/_posts/2017-10-01-メッセージ.md
@@ -2,19 +2,19 @@
 title: メッセージ
 layout: post
 ---
-歌：<font color="blue">渋谷凛</font> <font color="deeppink">安部菜々</font> <font color="lime">緒方智絵里</font> <font color="lightpink">島村卯月</font> <font color="gold">本田未央</font>
+歌：<font color="#0390d5">渋谷凛</font> <font color="#eb6b8c">安部菜々</font> <font color="#73bd5a">緒方智絵里</font> <font color="#f1919d">島村卯月</font> <font color="#fac217">本田未央</font>
 
 <p>Living in a dream<br />
 I'm feeling the light of fantasy<br />
 静かに手が触れた朝の光</p>
 
-<p><font color="blue">気づいているかな<br />
+<p><font color="#0390d5">気づいているかな<br />
 凉しい指先と</font><br />
-<font color="deeppink">視線の向こう追いかける</font><br />
-<font color="lime">それとも夢かな笑顔の告白と</font><br />
-<font color="lightpink">手紙をまた抱きしめてる</font></p>
+<font color="#eb6b8c">視線の向こう追いかける</font><br />
+<font color="#73bd5a">それとも夢かな笑顔の告白と</font><br />
+<font color="#f1919d">手紙をまた抱きしめてる</font></p>
 
-<p><font color="gold">桜の木の下で<br />
+<p><font color="#fac217">桜の木の下で<br />
 なんども読み返す</font><br />
 世界中に知らせたい<br />
 はやく放課後になれ</p>
@@ -26,15 +26,15 @@ I'm feeling the light of fantasy<br />
 飛べるよ<br />
 ほら 目に見えない翼</p>
 
-<p><font color="lightpink">気づかないフリかな<br />
+<p><font color="#f1919d">気づかないフリかな<br />
 照れたりするのかな<br />
 高鳴る胸が躍ってる</font><br />
-<font color="lime">それともまだかな<br />
+<font color="#73bd5a">それともまだかな<br />
 友達の前では</font><br />
-<font color="gold">なんて呼んでくれるのかな</font></p>
+<font color="#fac217">なんて呼んでくれるのかな</font></p>
 
-<p><font color="blue">晴れたら屋上で</font><br />
-<font color="deeppink">秘密の待ち合わせ</font><br />
+<p><font color="#0390d5">晴れたら屋上で</font><br />
+<font color="#eb6b8c">秘密の待ち合わせ</font><br />
 世界中に叫びたい<br />
 はやく放課後になれ</p>
 
@@ -45,13 +45,13 @@ I'm feeling the light of fantasy<br />
 待っててね<br />
 きっと 今そこに行くから</p>
 
-<p><font color="lime">憧れていた</font><br />
-<font color="gold">ドラマの中</font><br />
-<font color="blue">隣に並んでいつまでも</font><br />
+<p><font color="#73bd5a">憧れていた</font><br />
+<font color="#fac217">ドラマの中</font><br />
+<font color="#0390d5">隣に並んでいつまでも</font><br />
 ずっと</p>
 
-<p><font color="lightpink">小さなはじまりのメッセージ</font><br />
-<font color="deeppink">はじめて知った</font><br />
+<p><font color="#f1919d">小さなはじまりのメッセージ</font><br />
+<font color="#eb6b8c">はじめて知った</font><br />
 優しさが安らぐ場所<br />
 小さな約束のハーモニー<br />
 飛べるよ<br />
