--- a/_posts/2017-11-17-想いよひとつになれ.md
+++ b/_posts/2017-11-17-想いよひとつになれ.md
@@ -7,7 +7,7 @@ layout: post
 
 <p><font color="saddlebrown">//特别注意：请读完这里的全部内容之后再开始食用！<br />
 //本曲结构十分复杂，还请各位演唱者衡量自己和团队的能力情况来分配<br />
-//双层括号表示里面的部分还含有和声，之后可能会专门针对本曲出一个简谱版或五线谱版；本曲将不标注部分括号的演唱者</font></p>
+//双层括号表示里面的部分还含有和声，之后可能会专门针对本曲出一个更加详细的解说版本；本曲将不标注部分括号的演唱者</font></p>
 
 <p><font color="darkorange">想いよひとつになれ</font>((想いがひとつになるとき))<br />
 <font color="darkorange">このときを待っていた</font></p>
