--- a/_posts/2013-02-06-輝夜の城で踊りたい.md
+++ b/_posts/2013-02-06-輝夜の城で踊りたい.md
@@ -4,65 +4,65 @@ layout: post
 ---
 歌：μ's
 
-<p><font color="saddlebrown">//本曲中的“Ha!”等没有标注在内，请自行查阅call本</font></p>
+<p><a class="notation">//本曲中的“Ha!”等没有标注在内，请自行查阅call本</a></p>
 
-<p>【<font color="purple">希</font><font color="cyan">绘</font><font color="lime">花</font>】おいで! おいで! 誘惑の Dance again<br />
+<p>【<a class="nozomi">希</a><a class="eli">绘</a><a class="hanayo">花</a>】おいで! おいで! 誘惑の Dance again<br />
 　　　　　おいでよおいで! 輝夜の城へ<br />
-<font color="cyan">出逢いがあやつるミステリー</font><br />
-<font color="lime">危険なペルソナ(たすけて)</font></p>
+<a class="eli">出逢いがあやつるミステリー</a><br />
+<a class="hanayo">危険なペルソナ(たすけて)</a></p>
 
-<p>【<font color="darkorange">果</font><font color="silver">鸟</font><font color="gold">凛</font>】踊ろう! 踊ろう! 終わらない Dance beat<br />
+<p>【<a class="honoka">果</a><a class="kotori">鸟</a><a class="rin">凛</a>】踊ろう! 踊ろう! 終わらない Dance beat<br />
 　　　　　踊ろうよ踊ろう! 輝夜の城で<br />
-<font color="silver">夜空を切りとるレーザービーム</font><br />
-<font color="gold">私と見てよ?(にゃ)</font></p>
+<a class="kotori">夜空を切りとるレーザービーム</a><br />
+<a class="rin">私と見てよ?(にゃ)</a></p>
 
-<p>【<font color="blue">海</font><font color="red">姬</font><font color="hotpink">妮</font>】まばゆい星が照らす想い<br />
+<p>【<a class="umi">海</a><a class="maki">姬</a><a class="nico">妮</a>】まばゆい星が照らす想い<br />
 　　　　　今宵の夢よ永遠に<br />
-<font color="hotpink">明日のことは忘れたいの(にこっ)</font></p>
+<a class="nico">明日のことは忘れたいの(にこっ)</a></p>
 
 <p>私は紅い薔薇の姫よ<br />
-<font color="blue">優しくさらわれたい</font><br />
+<a class="umi">優しくさらわれたい</a><br />
 そっと囁いて意味ありげに目をそらす<br />
 あなたは白い月の<u>騎士[ナイト]</u><br />
-<font color="red">触れた手がまだ熱い</font><br />
+<a class="maki">触れた手がまだ熱い</a><br />
 のがさずに抱きしめて<br />
 この奇跡を恋と呼ぶのね</p>
 
-<p>【<font color="blue">海</font><font color="red">姬</font><font color="hotpink">妮</font>】おいで! おいで! 情熱で Dance again<br />
+<p>【<a class="umi">海</a><a class="maki">姬</a><a class="nico">妮</a>】おいで! おいで! 情熱で Dance again<br />
 　　　　　おいでよおいで! 輝夜の城へ<br />
-<font color="blue">迷いを飲みこむエナジー</font><br />
-<font color="red">眠らぬパッショネイト(でしょ？)</font></p>
+<a class="umi">迷いを飲みこむエナジー</a><br />
+<a class="maki">眠らぬパッショネイト(でしょ？)</a></p>
 
-<p>【<font color="purple">希</font><font color="cyan">绘</font><font color="lime">花</font>】踊ろう! 踊ろう! 止まらない Dance beat<br />
+<p>【<a class="nozomi">希</a><a class="eli">绘</a><a class="hanayo">花</a>】踊ろう! 踊ろう! 止まらない Dance beat<br />
 　　　　　踊ろうよ踊ろう! 輝夜の城で<br />
-<font color="cyan">星座が織りなすディスコティーク</font><br />
-<font color="purple">私も混ぜて?(ぷしゅっ！)</font></p>
+<a class="eli">星座が織りなすディスコティーク</a><br />
+<a class="nozomi">私も混ぜて?(ぷしゅっ！)</a></p>
 
-<p>【<font color="darkorange">果</font><font color="silver">鸟</font><font color="gold">凛</font>】きらめく星に誓う心<br />
+<p>【<a class="honoka">果</a><a class="kotori">鸟</a><a class="rin">凛</a>】きらめく星に誓う心<br />
 　　　　　儚い夢でいいわ<br />
-<font color="darkorange">明日は明日の風が吹くの(だよね！)</font></p>
+<a class="honoka">明日は明日の風が吹くの(だよね！)</a></p>
 
 <p>私は黒い薔薇の姫よ<br />
-<font color="red">激しくさらわれたい</font><br />
+<a class="maki">激しくさらわれたい</a><br />
 だから微笑んで追いかけてと目が誘う<br />
 あなたも黒い月の騎士<br />
-<font color="hotpink">瞳の奥は熱い</font><br />
+<a class="nico">瞳の奥は熱い</a><br />
 つかまえて抱きしめて<br />
 この奇跡は恋を呼ぶのね</p>
 
-<p><font color="gold">一緒に行こう？</font><br />
-<font color="darkorange">気づいてよー</font><br />
-<font color="silver">ほかの人を見ちゃいや！</font><br />
-<font color="lime">私だけを見て…！</font><br />
-<font color="cyan">後悔するわよ？</font><br />
-<font color="purple">楽しもう！</font><br />
-<font color="red">早くしなさいよ…</font><br />
-<font color="blue">鈍いのですね…</font><br />
-<font color="hotpink">いいの？</font></p>
+<p><a class="rin">一緒に行こう？</a><br />
+<a class="honoka">気づいてよー</a><br />
+<a class="kotori">ほかの人を見ちゃいや！</a><br />
+<a class="hanayo">私だけを見て…！</a><br />
+<a class="eli">後悔するわよ？</a><br />
+<a class="nozomi">楽しもう！</a><br />
+<a class="maki">早くしなさいよ…</a><br />
+<a class="umi">鈍いのですね…</a><br />
+<a class="nico">いいの？</a></p>
 
-<p><font color="hotpink">私は紅い薔薇の姫よ</font><br />
-<font color="lime">優しくさらわれたい</font><br />
-<font color="gold">そっと囁いて意味ありげに目をそらす</font><br />
+<p><a class="nico">私は紅い薔薇の姫よ</a><br />
+<a class="hanayo">優しくさらわれたい</a><br />
+<a class="rin">そっと囁いて意味ありげに目をそらす</a><br />
 あなたは白い月の騎士<br />
 触れた手がまだ熱い<br />
 のがさずに抱きしめて<br />
