灰姑娘应援色过于脑溢血，先回退再说吧

--- a/_posts/2014-07-30-メッセージ.md
+++ b/_posts/2014-07-30-メッセージ.md
@@ -2,20 +2,20 @@
 title: メッセージ
 layout: post
 ---
-歌：<a class="s-rin">渋谷凛</a> <a class="nana">安部菜々</a> <a class="chieri">緒方智絵里</a> <a class="uzuki">島村卯月</a> <a class="mio">本田未央</a>
+歌：<font color="blue">渋谷凛</font> <font color="deeppink">安部菜々</font> <font color="lime">緒方智絵里</font> <font color="lightpink">島村卯月</font> <font color="gold">本田未央</font>
 
 <p>Living in a dream<br />
 I'm feeling the light of fantasy<br />
 静かに手が触れた朝の光</p>
 
-<p><a class="s-rin">気づいているかな<br />
-凉しい指先と</a><br />
-<a class="nana">視線の向こう追いかける</a><br />
-<a class="chieri">それとも夢かな笑顔の告白と</a><br />
-<a class="uzuki">手紙をまた抱きしめてる</a></p>
+<p><font color="blue">気づいているかな<br />
+凉しい指先と</font><br />
+<font color="deeppink">視線の向こう追いかける</font><br />
+<font color="lime">それとも夢かな笑顔の告白と</font><br />
+<font color="lightpink">手紙をまた抱きしめてる</font></p>
 
-<p><a class="mio">桜の木の下で<br />
-なんども読み返す</a><br />
+<p><font color="gold">桜の木の下で<br />
+なんども読み返す</font><br />
 世界中に知らせたい<br />
 はやく放課後になれ</p>
 
@@ -26,15 +26,15 @@ I'm feeling the light of fantasy<br />
 飛べるよ<br />
 ほら 目に見えない翼</p>
 
-<p><a class="uzuki">気づかないフリかな<br />
+<p><font color="lightpink">気づかないフリかな<br />
 照れたりするのかな<br />
-高鳴る胸が躍ってる</a><br />
-<a class="chieri">それともまだかな<br />
-友達の前では</a><br />
-<a class="mio">なんて呼んでくれるのかな</a></p>
+高鳴る胸が躍ってる</font><br />
+<font color="lime">それともまだかな<br />
+友達の前では</font><br />
+<font color="gold">なんて呼んでくれるのかな</font></p>
 
-<p><a class="s-rin">晴れたら屋上で</a><br />
-<a class="nana">秘密の待ち合わせ</a><br />
+<p><font color="blue">晴れたら屋上で</font><br />
+<font color="deeppink">秘密の待ち合わせ</font><br />
 世界中に叫びたい<br />
 はやく放課後になれ</p>
 
@@ -45,13 +45,13 @@ I'm feeling the light of fantasy<br />
 待っててね<br />
 きっと 今そこに行くから</p>
 
-<p><a class="chieri">憧れていた</a><br />
-<a class="mio">ドラマの中</a><br />
-<a class="s-rin">隣に並んでいつまでも</a><br />
+<p><font color="lime">憧れていた</font><br />
+<font color="gold">ドラマの中</font><br />
+<font color="blue">隣に並んでいつまでも</font><br />
 ずっと</p>
 
-<p><a class="uzuki">小さなはじまりのメッセージ</a><br />
-<a class="nana">はじめて知った</a><br />
+<p><font color="lightpink">小さなはじまりのメッセージ</font><br />
+<font color="deeppink">はじめて知った</font><br />
 優しさが安らぐ場所<br />
 小さな約束のハーモニー<br />
 飛べるよ<br />
