--- a/_posts/2017-12-13-恋が咲く季節.md
+++ b/_posts/2017-12-13-恋が咲く季節.md
@@ -2,11 +2,11 @@
 title: 恋が咲く季節
 layout: post
 ---
-歌：<a class="kaede">高垣楓</a> <a class="mio">本田未央</a> <a class="hajime">藤原肇</a> <a class="hina">荒木比奈</a> <a class="yuzu">喜多見柚</a> <a class="mayu">佐久間まゆ</a> <a class="tomoe">村上巴</a> <a class="hiromi">関裕美</a> <a class="chieri">緒方智絵里</a>
+歌：<font color="lightgreen">高垣楓</font> <font color="orange">本田未央</font> <font color="mediumpurple">藤原肇</font> <font color="deepskyblue">荒木比奈</font> <font color="yellow">喜多見柚</font> <font color="crimson">佐久間まゆ</font> <font color="orangered">村上巴</font> <font color="magenta">関裕美</font> <font color="lime">緒方智絵里</font>
 
-<p>分组标记：【A组】<a class="kaede">高垣楓</a> <a class="mio">本田未央</a> <a class="hajime">藤原肇</a><br />
-　　　　　【B组】<a class="hina">荒木比奈</a> <a class="yuzu">喜多見柚</a> <a class="mayu">佐久間まゆ</a><br />
-　　　　　【C组】<a class="tomoe">村上巴</a> <a class="hiromi">関裕美</a> <a class="chieri">緒方智絵里</a></p>
+<p>分组标记：【A组】<font color="lightgreen">高垣楓</font> <font color="orange">本田未央</font> <font color="mediumpurple">藤原肇</font><br />
+　　　　　【B组】<font color="deepskyblue">荒木比奈</font> <font color="yellow">喜多見柚</font> <font color="crimson">佐久間まゆ</font><br />
+　　　　　【C组】<font color="orangered">村上巴</font> <font color="magenta">関裕美</font> <font color="lime">緒方智絵里</font></p>
 
 <p>【A】花びらが咲く頃 一目惚れを感じて<br />
 　　&nbsp;&nbsp;&nbsp;頬に染めた色を 隠して君に会えるの<br />
@@ -15,9 +15,9 @@ layout: post
 
 <p>【C】心地よい風が吹いてく<br />
 　　&nbsp;&nbsp;&nbsp;季節を掴みたい気持ち<br />
-<a class="kaede">ああ… もどかしい時の中 君に会えて</a><br />
-<a class="mio">照れずに 言い出したいの</a><br />
-<a class="hajime">「本当は好きです」</a><br />
+<font color="lightgreen">ああ… もどかしい時の中 君に会えて</font><br />
+<font color="orange">照れずに 言い出したいの</font><br />
+<font color="mediumpurple">「本当は好きです」</font><br />
 【9人】今は言える！</p>
 
 <p>【C】恋という心 確かめたくて<br />
@@ -25,31 +25,31 @@ layout: post
 【A】思い出に変わることを 信じているのは<br />
 【9人】いつでも 側にいて欲しいから</p>
 
-<p><a class="kaede">片思いのままで 流れていく時間が</a><br />
-<a class="mio">止まることを知らず 醒めない夢の続きは</a><br />
-<a class="hajime">口づけを待ってるだけの 眠り姫のように</a><br />
-<a class="hina">いつかは目覚めて 幸せになるから</a></p>
+<p><font color="lightgreen">片思いのままで 流れていく時間が</font><br />
+<font color="orange">止まることを知らず 醒めない夢の続きは</font><br />
+<font color="mediumpurple">口づけを待ってるだけの 眠り姫のように</font><br />
+<font color="deepskyblue">いつかは目覚めて 幸せになるから</font></p>
 
-<p><a class="yuzu">黄昏色に描いてた<br />
-君と見た景色が映る</a><br />
-<a class="mayu">もう鮮やかな この隠し切れない気持ち</a><br />
-<a class="tomoe">変わらないものだから</a><br />
-<a class="hiromi">ずっと見つめて欲しいの</a><br />
-<a class="chieri">「私だけ」を！</a></p>
+<p><font color="yellow">黄昏色に描いてた<br />
+君と見た景色が映る</font><br />
+<font color="crimson">もう鮮やかな この隠し切れない気持ち</font><br />
+<font color="orangered">変わらないものだから</font><br />
+<font color="magenta">ずっと見つめて欲しいの</font><br />
+<font color="lime">「私だけ」を！</font></p>
 
 <p>【Cool】つぼみを開いて 迎える恋は<br />
 【Passion】気高く 枯れなく 咲き誇ってるの<br />
 【Cute】暮れなずむ秋の空が白く染まる頃も<br />
 【9人】笑っていたら 温もりになる</p>
 
-<p><a class="yuzu">だから迷わず行けるの</a><br />
-<a class="mayu">まだ見たこと無い</a><br />
-<a class="tomoe">今から始まる</a><br />
-【<a class="hiromi">裕美</a>&<a class="chieri">智绘里</a>】二人だけの<br />
+<p><font color="yellow">だから迷わず行けるの</font><br />
+<font color="crimson">まだ見たこと無い</font><br />
+<font color="orangered">今から始まる</font><br />
+【<font color="magenta">裕美</font>&<font color="lime">智绘里</font>】二人だけの<br />
 【B&C】未来へ</p>
 
-<p><a class="kaede">どうしてこんなに 好きになったの</a><br />
-<a class="mio">伝えたい</a> <a class="hajime">キスしたい</a><br />
+<p><font color="lightgreen">どうしてこんなに 好きになったの</font><br />
+<font color="orange">伝えたい</font> <font color="mediumpurple">キスしたい</font><br />
 【9人】手を繫いで 歩きたい<br />
 めぐり逢う季節の果て 咲いた花のように<br />
 待ってる ずっと君だけを見て</p>
