随机抽检抓虫

--- a/_posts/2016-08-24-サンシャインぴっかぴか音頭.md
+++ b/_posts/2016-08-24-サンシャインぴっかぴか音頭.md
@@ -92,10 +92,10 @@ layout: post
 だからだいすきぴっかぴか</p>
 
 <p>あっちから こっちから よっといで<br />
-太陽サンシャインあびたら飛んでこい<br />
+<u>太陽[サンシャイン]</u>あびたら飛んでこい<br />
 あっちから こっちから よっといで<br />
-太陽サンシャインあびたら飛んでこい<br />
+<u>太陽[サンシャイン]</u>あびたら飛んでこい<br />
 あっちから こっちから よっといで<br />
-太陽サンシャインあびたら飛んでこい<br />
+<u>太陽[サンシャイン]</u>あびたら飛んでこい<br />
 あっちから こっちから よっといで<br />
-太陽サンシャインあびたら飛んでこい</p>
+<u>太陽[サンシャイン]</u>あびたら飛んでこい</p>
