プロセカ测试，你们能不能整点阳间颜色啊（

--- a/_posts/2017-02-01-ときめきエクスペリエンス！.md
+++ b/_posts/2017-02-01-ときめきエクスペリエンス！.md
@@ -24,7 +24,7 @@ layout: post
 約束の待つ場所は (もうすぐ！)<br />
 叶え！(叶え！) 届け！(届け！) 信じてた瞬間に<br />
 ハピネスと(ミラクルを)のせて<br />
-ときめき体験(<u>エクスペリエンス</u>)！<br />
+ときめき<u>体験[エクスペリエンス]</u>！<br />
 明日のステージへ！</p>
 
 <p><a class="t_kasumi">風を感じて</a>(Jumping!) <a class="t_kasumi">夢を抱きしめて</a><br />
@@ -43,7 +43,7 @@ layout: post
 約束してた場所は (今すぐ！)<br />
 繋げ！(繋げ！) 掴め！(掴め！) 終わらない夢を見て<br />
 高らかに(健やかに)歌おう<br />
-ときめき体験(<u>エクスペリエンス</u>)！<br />
+ときめき<u>体験[エクスペリエンス]</u>！<br />
 きらめくステージへ！</p>
 
 <p>(Yes!)<a class="t_kasumi">青春と音楽！</a><br />
