--- a/_posts/2021-06-23-モア！ジャンプ！モア！.md
+++ b/_posts/2021-06-23-モア！ジャンプ！モア！.md
@@ -10,9 +10,9 @@ layout: post
 いっせーのーで もっともっとジャンプ！ハイ！</p>
 
 <p><a class="h_minori">まだ最初は 消えちゃいそうな想いから</a>(一歩ずつ)<br />
-<a class="k_haruka">気づいたら 動き出したストーリー(いちにーさんはい！)</a><br />
-<a class="h_shizuku">ひとりじゃ 届きそうもない場所(今はもう)</a><br />
-<a class="m_airi">夢じゃない あなたがいるから(ホップ ステップ ジャンプ はい！)</a></p>
+<a class="k_haruka">気づいたら 動き出したストーリー</a>(いちにーさんはい！)<br />
+<a class="h_shizuku">ひとりじゃ 届きそうもない場所</a>(今はもう)<br />
+<a class="m_airi">夢じゃない あなたがいるから</a>(ホップ ステップ ジャンプ はい！)</p>
 
 <p>【<a class="h_minori">みのり</a>&<a class="m_airi">愛莉</a>】未来でも<br />
 【<a class="h_shizuku">雫</a>&<a class="k_haruka">遥</a>】世界でも<br />
@@ -23,7 +23,7 @@ layout: post
 【<a class="h_miku">ミク</a>&<a class="k_haruka">遥</a>】近づきたいからもっと(もっと！)<br />
 【<a class="h_shizuku">雫</a>&<a class="h_miku">ミク</a>】声きかせて<br />
 <a class="h_miku">今鳴った ハートのビートが</a><br />
-<a class="m_airi">とめられない！ とめたくない！(ないない！)</a><br />
+<a class="m_airi">とめられない！ とめたくない！</a>(ないない！)<br />
 【<a class="h_minori">みのり</a>&<a class="h_miku">ミク</a>】もっと(もっと！)<br />
 【<a class="h_miku">ミク</a>&<a class="k_haruka">遥</a>】アイをしたいからもっと(もっと！)<br />
 【<a class="h_shizuku">雫</a>&<a class="h_miku">ミク</a>】愛をちょーだい<br />
